--- a/pages/category/category.wxss
+++ b/pages/category/category.wxss
@@ -88,6 +88,7 @@ page {
   padding: 20rpx;
   border-bottom: 2rpx solid #ccc;
   font-size: 26rpx;
+  position: relative;
 }
 .details-left {
   float: left;
@@ -114,4 +115,15 @@ page {
   height: 100%;
   text-align: center;
   line-height: 200rpx;
+}
+.addCart {
+  width: 40rpx;
+  height: 40rpx;
+  position: absolute;
+  right: 80rpx;
+  bottom: 50rpx;
+}
+.addCart_img {
+  height: 100%;
+  width: 100%;
 }
