--- a/pages/cart/cart.wxss
+++ b/pages/cart/cart.wxss
@@ -1,1 +1,89 @@
 /* pages/cart/cart.wxss */
+.details {
+  height: 200rpx;
+  width: 100%;
+  padding: 20rpx;
+  border-bottom: 2rpx solid #ccc;
+  font-size: 26rpx;
+  position: relative;
+}
+.details-left {
+  float: left;
+  width: 80%;
+  height: 100%;
+}
+.details-left .details-img {
+  height: 100%;
+  width: 200rpx;
+  float: left;
+}
+.details-img {
+  margin-left: 60rpx;
+  
+}
+.select {
+  position: absolute;
+  width: 40rpx;
+  height: 40rpx;
+  left: 20rpx;
+  top: 80rpx;
+}
+.select_img, .unselect_img {
+  display: block;
+  width: 40rpx;
+  height: 40rpx;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+}
+.details-desc {
+  float: left;
+  /* height: 90%; */
+  margin-left: 5%;
+  margin-top: 10%;
+  width: 45%;
+}
+.details-right {
+  float: right;
+  width: 20%;
+  padding-right: 30rpx;
+  box-sizing: border-box;
+  height: 100%;
+  text-align: center;
+  line-height: 200rpx;
+}
+.addCart {
+  width: 154rpx;
+  height: 50rpx;
+  position: absolute;
+  right: 60rpx;
+  bottom: 30rpx;
+  border: 2rpx solid #ddd;
+}
+.plus, .num, .sub {
+  float: left;
+  width: 50rpx;
+  height: 50rpx;
+  line-height: 50rpx;
+  text-align: center;
+}
+
+.plus1, .plus2, .sub1, .sub2 {
+  display: block;
+  width: 60%;
+  height: 60%;
+  margin-left: 20%;
+  margin-top: 20%;
+}
+.num {
+  border-left: 2rpx solid #ddd;
+  border-right: 2rpx solid #ddd;
+}
+.num input {
+  width: 100%;
+  height: 100%;
+  float: left;
+}
