--- a/pages/cart/cart.wxss
+++ b/pages/cart/cart.wxss
@@ -1,4 +1,9 @@
 /* pages/cart/cart.wxss */
+.scroll {
+  padding-bottom: 50rpx;
+  box-sizing: border-box;
+  height: 100%;
+}
 .details {
   height: 200rpx;
   width: 100%;
@@ -86,4 +91,53 @@
   width: 100%;
   height: 100%;
   float: left;
+}
+
+.bottom_fixed {
+  height: 70rpx; 
+  width: 100%;
+  font-size: 28rpx;
+  position: fixed; 
+  bottom: 0;
+  left: 0;
+  background: #ddd;
+}
+.bottom_left {
+  float: left;
+  width: 60%;
+  height: 50rpx;
+  margin-right: 5%;
+  /* margin-left: 5%; */
+  margin-top: 10rpx;
+  /* background: #555; */
+}
+.select_text {
+  float: left;
+  height: 50rpx;
+  margin-left: 40rpx;
+  line-height: 50rpx;
+  margin-right: 50rpx;
+}
+.total {
+  height: 50rpx;
+  line-height: 50rpx;
+  float: right;
+  margin-right: 50rpx;
+}
+.selectAll, .unselectAll {
+  float: left;
+  width: 40rpx;
+  height: 40rpx;
+  margin-top: 5rpx;
+  margin-left: 20rpx;
+}
+.bottom_right {
+  float: right;
+  width: 25%;
+  margin-right: 5%;
+  height: 50rpx;
+  line-height: 50rpx;
+  margin-top: 10rpx;
+  background: red;
+  text-align: center;
 }
