--- a/pages/info/info.wxml
+++ b/pages/info/info.wxml
@@ -7,3 +7,10 @@
 <button class="page-body-button" type="primary" formType="openLocation">查看位置</button>
 <button class="page-body-button" type="primary" bindtap="chooseLocation">选择位置</button>
 <button class="page-body-button" type="primary" bindtap="loading">loading</button>
+
+<view class="container">
+ <view class="touch-item {{item.isTouchMove ? 'touch-move-active' : ''}}" data-index="{{index}}" bindtouchstart="touchstart" bindtouchmove="touchmove" wx:for="{{items}}" wx:key="">
+  <view class="content">{{item.content}}</view>
+  <view class="del" catchtap="del" data-index="{{index}}">删除</view>
+ </view>
+</view>
