--- a/pages/info/info.wxml
+++ b/pages/info/info.wxml
@@ -1,16 +1,8 @@
 <!--pages/info/info.wxml-->
-<text>pages/info/info.wxml</text>
-<view>
-  <view class = "address" bindtap = "chooseLocation">{{address}}</view>
+<import src="../../template/template.wxml"/>
+<view class = "info" bindtap='res'>
+  123
 </view>
-<button class="page-body-button" type="primary" bindtap="getLocation">获取位置</button>
-<button class="page-body-button" type="primary" formType="openLocation">查看位置</button>
-<button class="page-body-button" type="primary" bindtap="chooseLocation">选择位置</button>
-<button class="page-body-button" type="primary" bindtap="loading">loading</button>
-
-<view class="container">
- <view class="touch-item {{item.isTouchMove ? 'touch-move-active' : ''}}" data-index="{{index}}" bindtouchstart="touchstart" bindtouchmove="touchmove" wx:for="{{items}}" wx:key="">
-  <view class="content">{{item.content}}</view>
-  <view class="del" catchtap="del" data-index="{{index}}">删除</view>
- </view>
-</view>
+<view class="infoText animation-button" bindtap="translate">{{province}} {{city}} {{county}}</view>
+<button class="animation-button" bindtap="translate">选择城市</button>
+<template is="areaData" data="{{...item}}"/>
