--- a/pages/goods/goods.wxss
+++ b/pages/goods/goods.wxss
@@ -15,7 +15,14 @@
   height: 480rpx;
   margin-bottom: 20rpx;
 }
-
+.lamp_img {
+  position: absolute;
+  left: 0;
+  /* top: 0; */
+  right: 0;
+  /* bottom: 0; */
+  margin: auto;
+}
 .goods_desc {
   width: 100%;
   /* height: 200rpx; */
