--- a/pages/goods/goods.wxss
+++ b/pages/goods/goods.wxss
@@ -85,8 +85,42 @@
   width: 100%;
   height: 80rpx;
 }
+.cart {
+  width: 20%;
+  float: left;
+  height: 80rpx;
+  line-height: 80rpx;
+  color: #fff;
+  font-size: 28rpx;
+  text-align: center;
+  position: relative;
+  background: #fff;
+} 
+.qty {
+  position: absolute;
+  display: block;
+  border-radius: 50%;
+  background: red;
+  top: 5rpx;
+  right: 20rpx;
+  color: #fff;
+  width: 30rpx;
+  height: 30rpx;
+  line-height: 30rpx;
+  text-align: center;
+}
+.cart_img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 60rpx;
+  height: 60rpx;
+}
 .add, .buy {
-  width: 50%;
+  width: 40%;
   float: left;
   height: 80rpx;
   line-height: 80rpx;
