收货地址模块

--- a/pages/add/add.wxml
+++ b/pages/add/add.wxml
@@ -4,23 +4,23 @@
 
 <view class = "list">
   <text class = "text name">姓名</text>
-  <input  class = "input name_input" />
+  <input  class = "input name_input" placeholder='请输入' data-name = "name" bindinput='bindinput'/>
 </view>
 <view class = "list">
   <text class = "text tel" type = "idcard">联系电话</text>
-  <input  class = "input tel_input" />
+  <input  class = "input tel_input" placeholder='请输入' data-name = "tel" bindinput='bindinput' bindblur='bindblur'/>
 </view>
 <view class = "list " bindtap="translate">
   <text class = "text address">地址：</text>
-  <text class = "input animation-button" >{{province}} {{city}} {{county}}</text>
+  <text class = "input animation-button" >{{address.province}} {{address.city}} {{address.county}}</text>
   <image class = "right" src = "../right.png"></image>
 </view>
-<view class = "detail">
-  <textarea class = "detail_input" placeholder='请填写详细地址'></textarea>
+<view class = "detail"> 
+  <textarea wx:if = "{{show}}" class = "detail_input" placeholder='请填写详细地址' data-name = "detail" bindinput='bindinput'></textarea>
 </view>
 <view class = "list">
   <text class = "text post">邮政编码</text>
-  <input  class = "input post_input" placeholder='（选填）' />
+  <input  class = "input post_input" placeholder='（选填）' data-name = "post" bindinput='bindinput' />
 </view>
 <button class = "save" bindtap = "save">保存</button>
 
