--- a/pages/goods/goods.wxml
+++ b/pages/goods/goods.wxml
@@ -4,15 +4,15 @@
   <swiper class = "goods_img" indicator-dots="{{indicatorDots}}"
     autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" circular = "{{circular}}">
       <swiper-item wx:if = "{{goods.imgurl}}">
-           <image class = "lamp_img" src= "http://www.cwq888.cn/image/{{goods.imgurl}}"></image>   
+           <image class = "lamp_img" src= "{{imgUrl+goods.imgurl}}"></image>   
         <!-- <image src="{{item}}" class="slide-image" widtext="355" height="150"/> -->
       </swiper-item>
       <swiper-item wx:if = "{{goods.imgurl}}">
-          <image class = "lamp_img" src= "http://www.cwq888.cn/image/{{goods.imgurl}}"></image>  
+          <image class = "lamp_img" src= "{{imgUrl+goods.imgurl}}"></image>  
         <!-- <image src="{{item}}" class="slide-image" widtext="355" height="150"/> -->
       </swiper-item>
       <swiper-item wx:if = "{{goods.imgurl}}">
-          <image class = "lamp_img" src= "http://www.cwq888.cn/image/{{goods.imgurl}}"></image>  
+          <image class = "lamp_img" src= "{{imgUrl+goods.imgurl}}"></image>  
         <!-- <image src="{{item}}" class="slide-image" widtext="355" height="150"/> -->
       </swiper-item>
      
@@ -83,10 +83,10 @@
     <!-- 商品详情图片 -->
     <view class = "imgs" wx:if = "{{goods.imgurl}}">
     <!-- fail to load image:还是处理下比较好，错误出现的原因就是初始的时候image_url没有值，导致src="http://livec.dev/storage/"，所以报了404，后面逻辑处理的时候对image_url赋值了，图片才出来，处理的方式也简单，先判断image_url，没有就用wx:if隐藏下 -->
-        <image src= "http://www.cwq888.cn/image/{{goods.imgurl}}"></image> 
-        <image src= "http://www.cwq888.cn/image/{{goods.imgurl}}"></image> 
-        <image src= "http://www.cwq888.cn/image/{{goods.imgurl}}"></image> 
-        <image src= "http://www.cwq888.cn/image/{{goods.imgurl}}"></image> 
+        <image src= "{{imgUrl+goods.imgurl}}"></image> 
+        <image src= "{{imgUrl+goods.imgurl}}"></image> 
+        <image src= "{{imgUrl+goods.imgurl}}"></image> 
+        <image src= "{{imgUrl+goods.imgurl}}"></image> 
     </view>
 </view>
 <view class = "fixed">
