--- a/pages/add/add.wxss
+++ b/pages/add/add.wxss
@@ -10,6 +10,7 @@ page {
   height: 80rpx;
   line-height: 80rpx;
   border-bottom: 2rpx solid #ddd;
+  box-sizing: border-box;
   padding-left: 20rpx;
   font-size: 28rpx;
   background: #fff;
@@ -43,9 +44,10 @@ page {
 .detail_input {
   display: block;
   width: 100%;
-  height: 200rpx;
+  height: 120rpx;
   font-size: 28rpx;
   padding: 20rpx;  
+  box-sizing: border-box;
 }
 .save {
   width: 90%;
