--- a/pages/address/address.wxml
+++ b/pages/address/address.wxml
@@ -1,6 +1,31 @@
 <!--pages/address/address.wxml-->
 <view class = "address">
-
+  <view class = "addressList" wx:for = "{{addressList}}" wx:key = "{{index}}">
+    <view class = "detail">
+      <text class = "detail_name">{{item.name}}</text>
+      <text class = "detail_tel">{{item.tel}}</text>
+    </view>
+    <view class = "recieve">
+      收货地址：{{item.province}}{{item.cify}}{{item.country}}{{item.detail}}
+    </view>
+    <view class = "default">
+      <view class = "select">
+        <image class = "select_img" src = "../select.png"></image>
+        <text> 默认地址</text>
+      </view>
+      <view class = "edit_del">
+        <view class = "edit">
+          <image class = "edit_img" src = "../edit.png"></image>
+          <text>编辑</text>
+        </view>
+        <view class = "del">
+          <image class = "del_img" src = "../del.png"></image>
+          <text>删除</text>
+        </view>
+      </view>
+    </view>
+  </view>
+  <view bindtap='aaa'>123</view>
 </view>
 <view class = "address_fixed">
   <button class = "addAddress" bindtap='addAddress'>新增收货地址</button>
