--- a/pages/address/address.wxss
+++ b/pages/address/address.wxss
@@ -5,10 +5,66 @@ page{
   display: flex;
   flex-direction: column;
 }
+
 .address {
   flex: 1;
   background: #eee;
 }
+/* 地址样式 */
+.addressList {
+  /* height: 200rpx; */
+  font-size: 28rpx;
+  background: #fff;
+  margin-bottom: 60rpx;
+}
+.detail, .recieve {
+  height: 60rpx;
+  line-height: 60rpx; 
+  padding: 0 20rpx;
+}
+.detail_name{
+  float: left;
+  height: 100%;
+  line-height: 60rpx;
+}
+.detail_tel {
+  float: right;
+  height: 100%;
+  line-height: 60rpx;
+}
+.default {
+  height: 80rpx;
+  line-height: 80rpx;
+  padding: 0 20rpx;
+  border-top: 2rpx solid #ddd;
+}
+.select {
+  float: left;
+  height: 100%;
+  line-height: 80rpx;
+}
+.select_img{
+  width: 30rpx;
+  height: 30rpx;
+}
+.edit_img, .del_img {
+  width: 28rpx;
+  height: 28rpx;
+  margin: 0 20rpx;
+}
+.edit_del {
+  float: right;
+  height: 100%;
+  line-height: 80rpx;
+}
+.edit {
+  float: left;
+}
+.del {
+  float: right;
+}
+
+/* 底部样式 */
 .address_fixed {
   width: 100%;
   height: 120rpx;
