--- a/template/template.wxml
+++ b/template/template.wxml
@@ -10,7 +10,8 @@
 
 <template name="areaData">
   <view class="animation-element-wrapper" animation="{{animation}}" style="visibility:{{show ? 'visible':'hidden'}}" bindtap="hiddenFloatView" data-id="444">
-     <view class="animation-element" catchtap="nono">
+     <!-- <view class="animation-element" catchtap="nono"> -->
+     <view class="animation-element">
         <text class="left-bt" catchtap="hiddenFloatView" data-id="555">取消</text>
         <text class="right-bt" catchtap="hiddenFloatView" data-id="666">确定</text>
           <view class="line"></view> 
