--- a/pages/add/add.wxss
+++ b/pages/add/add.wxss
@@ -11,6 +11,7 @@ page {
   line-height: 80rpx;
   border-bottom: 2rpx solid #ddd;
   padding-left: 20rpx;
+  box-sizing: border-box;
   font-size: 28rpx;
   background: #fff;
   position: relative;
@@ -43,7 +44,7 @@ page {
 .detail_input {
   display: block;
   width: 100%;
-  height: 200rpx;
+  height: 120rpx;
   font-size: 28rpx;
   padding: 20rpx;  
 }
