--- a/pages/category/category.wxss
+++ b/pages/category/category.wxss
@@ -54,27 +54,49 @@ page {
   left: 0;
   border-radius: 16rpx;
 }
-.tabs {
+.category_title {
   width: 100%;
-  height: 8%; 
+  height: 8%;
+}
+.second_css {
+  float: left;
+  width: 8%;
+  margin: 0 1%;
+  height: 100%;
+  position: relative;
+}
+.list_view {
+  position: absolute;
+  left: 0;
+  top: 0 ;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 50rpx;
+  height: 50rpx;
+}
+.tabs {
+  float: left;
+  width: 90%;
+  height: 100%;  
+  display: flex;
+  flex-direction: row;
   white-space: nowrap;
   font-size: 28rpx;
   box-sizing: border-box;
-  padding: 1.5% 0 ;
+  padding: 1.5% 0 ; 
 }
 .tab-item {
-  display: inline-block;
-  margin: 0 40rpx;
-  /* height: 50rpx; */
-  /* line-height: 50rpx; */
+  display: inline-block; 
+  align-items:center; 
+  margin: 10rpx 40rpx;
 }
-/* 隐藏滚动条 */
+ /* 隐藏滚动条  */
 ::-webkit-scrollbar {
   width: 0;
   height: 0;
   color: transparent;
 }
-
 /* 商品样式 */
 .tabs-content {
   height: 92%;
@@ -82,7 +104,11 @@ page {
 .scroll-y {
   border-top: 2rpx solid #ccc;
 }
-.details {
+
+/*-------------------------------------分割线----------------------------- --*/
+ 
+ /* 一行一个商品 */
+ .details {
   height: 200rpx;
   width: 100%;
   padding: 20rpx;
@@ -102,7 +128,6 @@ page {
 }
 .details-desc {
   float: left;
-  /* height: 90%; */
   margin-left: 5%;
   margin-top: 10%;
   width: 45%;
@@ -115,15 +140,68 @@ page {
   height: 100%;
   text-align: center;
   line-height: 160rpx;
-}
+}  
 .addCart {
   width: 50rpx;
   height: 50rpx;
   position: absolute;
-  right: 80rpx;
-  bottom: 70rpx;
+  right:80rpx;
+  bottom: 40rpx;
 }
 .addCart_img {
   height: 100%;
   width: 100%;
 }
+
+/*-------------------------------------分割线----------------------------- --*/
+
+/* 一行两个商品样式 */
+.d-details {
+  width: 370rpx;
+  float: left;
+  font-size: 28rpx;
+  border-bottom: 10rpx solid #ddd;
+  position: relative;
+} 
+.d-details:nth-child(2n) {
+  border-left: 10rpx solid #ddd;
+}
+.d-details-left {
+  width: 100%;
+  height: 450rpx;
+}
+.d-details-right {
+  margin: 4rpx 0;
+}
+.d-details-img {
+  width: 370rpx;
+  height: 370rpx;
+}
+.d-details-desc, .d-details-right {
+  padding-left: 10rpx;
+}
+
+.d-addCart {
+  width: 50rpx;
+  height: 50rpx;
+  position: absolute;
+  right: 40rpx;
+  bottom: 0;
+}
+.d-addCart_img {
+  height: 100%;
+  width: 100%;
+}
+.d-addCart {
+  width: 50rpx;
+  height: 50rpx;
+  position: absolute;
+  right:40rpx;
+  bottom: 40rpx;
+}
+.d-addCart_img {
+  height: 100%;
+  width: 100%;
+}
+
+/**/
