--- a/pages/add/add.wxss
+++ b/pages/add/add.wxss
@@ -12,7 +12,6 @@ page {
   border-bottom: 2rpx solid #ddd;
   box-sizing: border-box;
   padding-left: 20rpx;
-  box-sizing: border-box;
   font-size: 28rpx;
   background: #fff;
   position: relative;
@@ -61,3 +60,20 @@ page {
   text-align: center;
   margin-top: 40rpx;
 }
+/*swtich样式-start*/
+/*swtich整体大小*/
+.wx-switch-input{
+  width:82rpx !important;
+  height:44rpx !important;
+}
+/*白色样式（false的样式）*/
+.wx-switch-input::before{
+  width:80rpx !important;
+  height: 40rpx !important;
+}
+/*绿色样式（true的样式）*/
+.wx-switch-input::after{
+  width: 40rpx !important;
+  height: 40rpx !important;
+}
+/*swtich样式end*/
