--- a/pages/address/address.wxss
+++ b/pages/address/address.wxss
@@ -5,9 +5,9 @@ page{
   display: flex;
   flex-direction: column;
 }
-
 .address {
   flex: 1;
+  height: 80%;
   background: #eee;
 }
 /* 地址样式 */
@@ -15,7 +15,7 @@ page{
   /* height: 200rpx; */
   font-size: 28rpx;
   background: #fff;
-  margin-bottom: 60rpx;
+  margin-bottom: 20rpx;
 }
 .detail, .recieve {
   height: 60rpx;
@@ -70,6 +70,7 @@ page{
   height: 120rpx;
   background: #fff;
   position: relative;
+  border-top: 2rpx solid #ddd;
 }
 .addAddress{
   display: block;
